# PixWallet

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: check-target-branch.yml  publish.yml
.github/workflows/.github/workflows/: check-target-branch.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  Tauri.toml  tauri.conf.json  wallet.db
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs  schema.rs
src-tauri/src/models/: dto.rs  history.rs  message_type.rs  mod.rs  network.rs  token_price.rs  wallet.rs
src-tauri/src/repository/: history_repo.rs  mod.rs  token_price_repo.rs  wallet_repo.rs
src-tauri/src/service/: greet.rs  mod.rs  network_monitor.rs  notice.rs  rpc.rs  wallet.rs
src-tauri/src/utils/: http_client.rs  macros.rs  mod.rs
src/api/: index.ts  requery.ts
src/assets/: global.css  icon.scss
src/components/: GlobalAlert.vue  GlobalToast.vue  Pagination.vue  ReturnButton.vue  TokenPriceCard.vue  WalletCardList.vue
src/hooks/: useNav.ts
src/models/: index.ts
src/pages/: Home.vue
src/pages/components/: NetworkMonitor.vue  TransferStatus.vue  WalletDelModal.vue
src/pages/setting/: index.vue
src/pages/transfer/: Transfer.vue
src/pages/wallet/: Item.vue  List.vue  Transfer.vue  index.vue  wallet.vue
src/plugins/: tauriListener.ts
src/router/: index.ts  init.ts
src/stores/: alert.ts  app.ts  notification.ts  user.ts
src/types/: global.d.ts
src/utils/: alert.ts  common.ts  notify.ts
