[package]
name = "solana_wallet"
version = "0.1.0"
description = "solana wallet tauri app"
authors = ["Tcyeee"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "solana_wallet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-sdk = "3.0.0"
solana-client = "3.0.0"
bs58 = "0.5.0"
